<resources>
    <string name="app_name">Admire Lite</string>

    <string name="title_places">Места</string>
    <string name="title_events">Мероприятия</string>
    <string name="title_profile">Профиль</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="event_to_site">Перейти на сайт</string>
    <string name="event_to_vk">Узнать больше в ВК</string>
    <string name="icon_vk">vk</string>
    <string name="event_to_map">Увидеть на карте</string>
    <string name="place_to_map">Увидеть на карте</string>
    <string name="change_region_hint">Введите город</string>
    <string name="settings_change_city">Изменить город</string>
    <string name="place_share">Поделиться местом</string>
    <string name="settings_follow_location">Оповещать о местах рядом</string>
    <string name="settings_sing_in">Войти в профиль</string>
    <string name="authorization_welcome">Войдите в свой аккаунт Admire чтобы воспользоваться дополнительными
        возможностями сервиса
    </string>
    <string name="authorization_hint_login">Введите логин</string>
    <string name="authorization_hint_password">Введите пароль</string>
    <string name="authorization_sing_in">Войти</string>
    <string name="authorization_no_login_or_password">Неверный логин или пароль</string>
    <string name="authorization_no_internet">Ошибка подключения, повторите попытку еще раз</string>
    <string name="profile_sing_out">Выйти из аккаунта</string>
    <string name="opened_place_input_comment">Введите комментарий</string>
    <string name="opened_place_not_authorized">Комментировать могут только зарегистрированные пользователи</string>
    <string name="opened_place_sing_in">Войти</string>
    <string name="authorization_registration">Регистрация</string>
    <string name="title_map">Карта</string>
</resources>
