<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".places.fragments.OpenedPlaceChatFragment">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_above="@+id/opened_place_bottom_layout" android:layout_marginBottom="0dp">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/opened_place_messages">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:layout_margin="24dp" android:text="Комментариев нет"
                      android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:id="@+id/opened_place_bottom_layout" android:background="@android:color/white"
    android:elevation="8dp" android:translationZ="8dp"
                    android:layout_alignParentBottom="true" android:layout_marginBottom="0dp">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/opened_place_input_comment_layout" android:visibility="gone">

            <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:hint="@string/opened_place_input_comment" android:id="@+id/opened_place_input_comment"
                      android:maxLines="4" android:layout_toStartOf="@+id/opened_place_send_comment"
                      android:layout_marginEnd="0dp"/>

            <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@drawable/ic_send_24dp" style="@style/Widget.AppCompat.ActionButton.CloseMode"
            android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
            android:id="@+id/opened_place_send_comment"/>

        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/opened_place_not_authorized_layout" android:visibility="visible"
        android:padding="8dp">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/opened_place_not_authorized"/>

            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/opened_place_sing_in" android:id="@+id/opened_place_sing_in_button"
            style="@style/Widget.AppCompat.Button.Borderless" android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>