<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".events.fragments.OpenedEventFragment">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     style="@style/Widget.AppCompat.ActionButton.CloseMode" android:src="@drawable/ic_arrow_back_white_24dp"
                     android:id="@+id/opened_event_button_back"/>

    </RelativeLayout>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:id="@+id/opened_place_scroll_view" android:fillViewport="true">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <RelativeLayout android:layout_width="match_parent" android:layout_height="240dp">

                <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
                           tools:srcCompat="@tools:sample/backgrounds/scenic"
                           android:scaleType="centerCrop"
                           android:id="@+id/opened_event_avatar"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Название места" android:layout_marginBottom="0dp"
                        android:layout_alignParentBottom="true" android:textColor="@android:color/white"
                        android:textSize="24sp" android:padding="8dp" android:id="@+id/opened_event_name"
                        android:shadowColor="@android:color/darker_gray" android:shadowDx="1"
                        android:shadowDy="1" android:shadowRadius="2"/>

            </RelativeLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:padding="8dp" android:orientation="horizontal">

                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:src="@drawable/ic_event_silver_24dp"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/opened_event_time" android:paddingLeft="4dp" android:paddingTop="2dp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:padding="8dp" android:orientation="horizontal"
                          android:id="@+id/opened_event_group_layout">

                <ImageView android:layout_width="24dp" android:layout_height="24dp"
                           android:src="@drawable/image_icon_vk"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:paddingTop="2dp" android:paddingLeft="4dp"
                          android:text="@string/event_to_vk"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:padding="8dp" android:orientation="horizontal"
                          android:id="@+id/opened_event_site_layout">

                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/ic_language_silver_24dp"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:paddingTop="2dp" android:paddingLeft="4dp"
                android:text="@string/event_to_site"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:padding="8dp" android:orientation="horizontal"
                          android:id="@+id/opened_event_location_layout">

                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/ic_location_on_silver_24dp"/>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:paddingTop="2dp" android:paddingLeft="4dp"
                          android:text="@string/event_to_map"/>

            </LinearLayout>

            <View android:layout_width="match_parent" android:layout_height="0.5dp"
                  android:background="@android:color/darker_gray"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Описание мероприятия"
                    android:id="@+id/opened_event_description"
                    android:textSize="14sp" android:padding="8dp"
                    android:textColor="@android:color/black"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>