<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".profile.AuthorizationFragment"
              android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:background="@color/colorPrimary" android:elevation="8dp"
    android:translationZ="8dp">

        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     style="@style/Widget.AppCompat.ActionButton.CloseMode" android:src="@drawable/ic_arrow_back_white_24dp"
                     android:id="@+id/authorization_button_back"/>

    </RelativeLayout>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                  android:orientation="vertical" android:gravity="center"
                  android:id="@+id/authorization_sing_in_layout" android:layout_gravity="center"
    android:visibility="visible">

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@mipmap/ic_launcher_foreground" android:layout_gravity="center"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAlignment="center" android:text="@string/authorization_welcome"
                  android:maxWidth="260dp" android:textSize="16sp" android:layout_marginBottom="24dp"/>

        <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/authorization_input_login_layout">

            <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                             android:layout_height="wrap_content"
                                                             android:hint="@string/authorization_hint_login" android:id="@+id/authorization_input_login"
                                                             android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/authorization_input_password_layout">

            <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                             android:layout_height="wrap_content"
                                                             android:hint="@string/authorization_hint_password" android:id="@+id/authorization_input_password"
                                                             android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/authorization_no_login_or_password" android:textColor="@android:color/holo_orange_light"
                  android:layout_gravity="center" android:id="@+id/authorization_error"
                  android:visibility="invisible"/>

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/authorization_sing_in" android:id="@+id/authorization_button_sing_in"
                style="@style/Widget.AppCompat.Button.Borderless" android:layout_gravity="center"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="8dp" android:text="@string/authorization_registration"
                  android:textColor="@android:color/black" android:layout_gravity="center"
                  android:id="@+id/authorization_to_registration_button"/>

    </LinearLayout>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:id="@+id/authorization_registration_layout" android:visibility="gone">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:gravity="center" android:paddingBottom="24dp">

            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:src="@mipmap/ic_launcher_foreground" android:layout_gravity="center"/>

            <TextView android:layout_width="260dp" android:layout_height="wrap_content"
            android:text="Создание нового аккаунта" android:textColor="@android:color/black"
            android:textAlignment="center"/>

            <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_login_layout"
                                                           app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="Придумайте логин"
                                                                 android:id="@+id/authorization_input_new_login"
                                                                 android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_first_name_layout"
                                                           app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="Ваше имя"
                                                                 android:id="@+id/authorization_input_new_first_name"
                                                                 android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_last_name_layout"
                                                           app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="Ваша фамилия"
                                                                 android:id="@+id/authorization_input_new_last_name"
                                                                 android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <RadioGroup android:layout_width="260dp" android:layout_height="wrap_content"
                        android:orientation="horizontal">

                <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:text="Парень" android:layout_weight="1"
                             android:id="@+id/authorization_input_new_sex_man" android:checked="true"/>

                <RadioButton android:layout_width="match_parent" android:layout_height="wrap_content"
                             android:text="Девушка" android:layout_weight="1"
                             android:id="@+id/authorization_input_new_sex_woman"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_email_layout"
                                                           app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="Ваш email"
                                                                 android:id="@+id/authorization_input_new_email"
                                                                 android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="260dp"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_city_layout"
                                                           app:errorEnabled="true">

                <android.support.v7.widget.AppCompatAutoCompleteTextView android:layout_width="match_parent"
                                                                         android:layout_height="wrap_content"
                                                                         android:id="@+id/authorization_input_new_city" android:hint="Ваш город"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_password_layout"
                                                           app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="Придумайте пароль"
                                                                 android:id="@+id/authorization_input_new_password"
                                                                 android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/authorization_input_new_password_repeat_layout"
                                                           app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText android:layout_width="260dp"
                                                                 android:layout_height="wrap_content"
                                                                 android:hint="Повторите пароль"
                                                                 android:id="@+id/authorization_input_new_password_repeat"
                                                                 android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textColor="@android:color/holo_orange_light"
                      android:layout_gravity="center" android:id="@+id/authorization_registration_error"
                      android:visibility="invisible"/>

            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="Зарегистрироваться" android:id="@+id/authorization_button_registration"
                    style="@style/Widget.AppCompat.Button.Borderless" android:layout_gravity="center"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginTop="8dp" android:text="Войти"
                      android:textColor="@android:color/black" android:layout_gravity="center"
                      android:id="@+id/authorization_to_sing_in_button"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>